--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
 <section id="contact">
 	<div class="inner">
 		<section>
-			<form action="https://formspree.io/{{ site.email }}" method="POST">
+			<form action="#" method="POST">
 				<div class="field half first">
-					<label for="name">Name</label>
+					<label for="name">Nombre</label>
 					<input type="text" name="name" id="name" />
 				</div>
 				<div class="field half">
@@ -12,12 +12,12 @@
 					<input type="text" name="_replyto" id="email" />
 				</div>
 				<div class="field">
-					<label for="message">Message</label>
+					<label for="message">Mensaje</label>
 					<textarea name="message" id="message" rows="6"></textarea>
 				</div>
 				<ul class="actions">
-					<li><input type="submit" value="Send Message" class="special" /></li>
-					<li><input type="reset" value="Clear" /></li>
+					<li><input type="submit" value="Enviar Mensaje" class="special" /></li>
+					<li><input type="reset" value="Limpiar" /></li>
 				</ul>
 			</form>
 		</section>
@@ -32,14 +32,14 @@
 			<section>
 				<div class="contact-method">
 					<span class="icon alt fa-phone"></span>
-					<h3>Phone</h3>
+					<h3>Teléfono</h3>
 					<a href="tel:{{ site.phone }}">{{ site.phone }}</a>
 				</div>
 			</section>
 			<section>
 				<div class="contact-method">
 					<span class="icon alt fa-home"></span>
-					<h3>Address</h3>
+					<h3>Dirección</h3>
 					<span>
 					{% if site.street_address %}
 					    {{ site.street_address }}<br />
@@ -81,7 +81,7 @@
 				<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
 				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
 				<li>Jekyll integration: <a href="http://andrewbanchi.ch" target="_blank">Andrew Banchich</a></li>
-
+				<li>Modified by: <a href="http://laymont.github.io" target="_blank">Laymont Arratia</a></li>
 			</ul>
 		</div>
 	</footer>
